--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.5</version>
+		<version>3.1.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ProyectoGPS</groupId>
@@ -86,11 +86,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-  			<groupId>org.springframework.boot</groupId>
-  			<artifactId>spring-boot-starter-test</artifactId>
-  			<scope>test</scope>
-		</dependency>
-		<dependency>
   			<groupId>org.mockito</groupId>
   			<artifactId>mockito-junit-jupiter</artifactId>
   			<version>4.11.0</version>
@@ -113,13 +108,24 @@
     <plugin>
       <artifactId>maven-compiler-plugin</artifactId>
       <version>3.10.1</version>
-      <!-- tu configuración aquí -->
+      <configuration>
+        <source>${java.version}</source>
+        <target>${java.version}</target>
+      </configuration>
     </plugin>
 
     <!-- Spring Boot -->
     <plugin>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-maven-plugin</artifactId>
+      <configuration>
+        <excludes>
+          <exclude>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+          </exclude>
+        </excludes>
+      </configuration>
     </plugin>
 
     <!-- Surefire sin includes ni excludes -->
