--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -20,3 +20,7 @@ server.port=8081
 management.endpoints.web.exposure.include=prometheus
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+
+# Configuración de Jackson para manejar proxies de Hibernate
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jpa.open-in-view=false
