Mejoras en el microservicio v3

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -23,4 +23,10 @@ management.metrics.export.prometheus.enabled=true
 
 # Configuración de Jackson para manejar proxies de Hibernate
 spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
+spring.jackson.deserialization.accept-empty-string-as-null-object=true
 spring.jpa.open-in-view=false
+
+# Configuración adicional para Content-Type
+spring.mvc.contentnegotiation.favor-parameter=false
+spring.mvc.contentnegotiation.favor-path-extension=false
